--- a/ldapadmin/src/main/webapp/console/app/assets/lang/en.json
+++ b/ldapadmin/src/main/webapp/console/app/assets/lang/en.json
@@ -3,6 +3,10 @@
   "home.waiting_users" : "waiting users",
   "home.expired_users" : "users expired today",
   "home.connected"     : "connected today",
+  "home.view_manage"   : "View & manage",
+  "home.nb_requests"   : "Requests",
+  "home.user"   : "User",
+  "home.org"   : "Org.",
 
   "tab.infos"          : "Infos",
   "tab.groups"         : "Groups",
