Add interval chooser on user analytics

--- a/ldapadmin/src/main/webapp/console/app/assets/lang/en.json
+++ b/ldapadmin/src/main/webapp/console/app/assets/lang/en.json
@@ -48,5 +48,10 @@
 
   "analytics.title"    : "Analytics",
   "analytics.requests" : "Number of requests",
-  "analytics.layers"   : "Most viewed layers"
+  "analytics.layers"   : "Most viewed layers",
+  "analytics.day"      : "Today",
+  "analytics.week"     : "Last week",
+  "analytics.month"    : "Last month",
+  "analytics.3month"   : "Last 3 month",
+  "analytics.year"     : "Last year"
 }
