--- a/ldapadmin/src/main/webapp/console/app/assets/lang/en.json
+++ b/ldapadmin/src/main/webapp/console/app/assets/lang/en.json
@@ -3,6 +3,7 @@
   "nav.users"          : "Users",
   "nav.analytics"      : "Analytics",
   "nav.logs"           : "Logs",
+
   "home.users"         : "Manage users",
   "home.waiting_users" : "waiting users",
   "home.expired_users" : "users expired today",
@@ -11,6 +12,7 @@
   "home.nb_requests"   : "Requests",
   "home.user"          : "User",
   "home.org"           : "Org.",
+  "home.logs"          : "Admin logs",
 
   "tab.infos"          : "Infos",
   "tab.groups"         : "Groups",
@@ -29,6 +31,8 @@
   "group.app"          : "Application groups",
   "group.newuser"      : "New user",
   "group.newgroup"     : "New group",
+  "group.users"        : "users",
+  "group.filter_users" : "Filter",
 
   "msg.compose"        : "Compose message",
   "msg.date"           : "Date",
