Home refactoring, plug with real services

--- a/ldapadmin/src/main/webapp/console/app/assets/lang/en.json
+++ b/ldapadmin/src/main/webapp/console/app/assets/lang/en.json
@@ -1,65 +1,66 @@
 {
-  "nav.dashboard"      : "Dashboard",
-  "nav.users"          : "Users",
-  "nav.analytics"      : "Analytics",
-  "nav.logs"           : "Logs",
+  "nav.dashboard"       : "Dashboard",
+  "nav.users"           : "Users",
+  "nav.analytics"       : "Analytics",
+  "nav.logs"            : "Logs",
 
-  "home.users"         : "Manage users",
-  "home.waiting_users" : "waiting users",
-  "home.expired_users" : "users expired today",
-  "home.connected"     : "connected today",
-  "home.view_manage"   : "View & manage",
-  "home.nb_requests"   : "Requests",
-  "home.user"          : "User",
-  "home.org"           : "Org.",
-  "home.logs"          : "Admin logs",
+  "home.users"          : "Manage users",
+  "home.waiting_users"  : "waiting users",
+  "home.expired_users"  : "users expired today",
+  "home.connected"      : "connected today",
+  "home.view_manage"    : "View & manage",
+  "home.nb_requests"    : "Req.",
+  "home.user"           : "User",
+  "home.org"            : "Org.",
+  "home.logs"           : "Admin logs",
 
-  "tab.infos"          : "Infos",
-  "tab.groups"         : "Groups",
-  "tab.analytics"      : "Analytics",
-  "tab.messages"       : "Messages",
-  "tab.logs"           : "Logs",
-  "tab.manage"         : "Manage",
+  "tab.infos"           : "Infos",
+  "tab.groups"          : "Groups",
+  "tab.analytics"       : "Analytics",
+  "tab.messages"        : "Messages",
+  "tab.logs"            : "Logs",
+  "tab.manage"          : "Manage",
 
-  "user.updated"       : "User updated",
-  "user.error"         : "Error while saving user",
-  "user.save"          : "Save",
-  "user.delete"        : "Delete user",
+  "user.updated"        : "User updated",
+  "user.error"          : "Error while saving user",
+  "user.save"           : "Save",
+  "user.delete"         : "Delete user",
 
-  "group.allusers"     : "All users",
-  "group.system"       : "System groups",
-  "group.app"          : "Application groups",
-  "group.newuser"      : "New user",
-  "group.newgroup"     : "New group",
-  "group.users"        : "users",
-  "group.filter_users" : "Filter",
+  "group.allusers"      : "All users",
+  "group.system"        : "System groups",
+  "group.app"           : "Application groups",
+  "group.newuser"       : "New user",
+  "group.newgroup"      : "New group",
+  "group.users"         : "users",
+  "group.filter_users"  : "Filter",
 
-  "msg.compose"        : "Compose message",
-  "msg.date"           : "Date",
-  "msg.subject"        : "Subject",
-  "msg.sender"         : "Sender",
-  "msg.messages"       : "Messages",
-  "msg.on"             : "on",
-  "msg.attachments"    : "Attachments",
-  "msg.templates"      : "Choose template",
-  "msg.title"          : "Title",
-  "msg.content"        : "Content",
-  "msg.cancel"         : "Cancel",
-  "msg.send"           : "Send",
-  "msg.sent"           : "Message sent!",
-  "msg.error"          : "Error sending message",
+  "msg.compose"         : "Compose message",
+  "msg.date"            : "Date",
+  "msg.subject"         : "Subject",
+  "msg.sender"          : "Sender",
+  "msg.messages"        : "Messages",
+  "msg.on"              : "on",
+  "msg.attachments"     : "Attachments",
+  "msg.templates"       : "Choose template",
+  "msg.title"           : "Title",
+  "msg.content"         : "Content",
+  "msg.cancel"          : "Cancel",
+  "msg.send"            : "Send",
+  "msg.sent"            : "Message sent!",
+  "msg.error"           : "Error sending message",
 
-  "logs.logs"          : "Admin logs",
-  "logs.date"          : "Date",
-  "logs.sender"        : "Sender",
-  "logs.type"          : "Action",
+  "logs.logs"           : "Admin logs",
+  "logs.date"           : "Date",
+  "logs.sender"         : "Sender",
+  "logs.type"           : "Action",
 
-  "analytics.title"    : "Analytics",
-  "analytics.requests" : "Number of requests",
-  "analytics.layers"   : "Most viewed layers",
-  "analytics.day"      : "Today",
-  "analytics.week"     : "Last week",
-  "analytics.month"    : "Last month",
-  "analytics.3month"   : "Last 3 month",
-  "analytics.year"     : "Last year"
+  "analytics.title"     : "Analytics",
+  "analytics.requests"  : "Number of requests",
+  "analytics.layers"    : "Most viewed layers",
+  "analytics.day"       : "Today",
+  "analytics.week"      : "Last week",
+  "analytics.month"     : "Last month",
+  "analytics.3month"    : "Last 3 month",
+  "analytics.year"      : "Last year",
+  "analytics.errorload" : "Error loading data"
 }
