Missing translations in analytics + linting

--- a/ldapadmin/src/main/webapp/console/app/assets/lang/en.json
+++ b/ldapadmin/src/main/webapp/console/app/assets/lang/en.json
@@ -55,6 +55,7 @@
   "logs.type"           : "Action",
 
   "analytics.title"     : "Analytics",
+  "analytics.everyone"  : "Everyone",
   "analytics.requests"  : "Number of requests",
   "analytics.layers"    : "Most viewed layers",
   "analytics.day"       : "Today",
