--- a/ldapadmin/src/main/webapp/console/app/assets/lang/en.json
+++ b/ldapadmin/src/main/webapp/console/app/assets/lang/en.json
@@ -49,6 +49,7 @@
   "msg.sent"            : "Message sent!",
   "msg.error"           : "Error sending message",
 
+  "logs.title"          : "Administration logs",
   "logs.logs"           : "Admin logs",
   "logs.date"           : "Date",
   "logs.sender"         : "Sender",
