Add missing recipient to log table

--- a/ldapadmin/src/main/webapp/console/app/assets/lang/en.json
+++ b/ldapadmin/src/main/webapp/console/app/assets/lang/en.json
@@ -53,6 +53,7 @@
   "logs.logs"           : "Admin logs",
   "logs.date"           : "Date",
   "logs.sender"         : "Sender",
+  "logs.target"         : "Recipient",
   "logs.type"           : "Action",
 
   "analytics.title"     : "Analytics",
