More coherent user page

--- a/ldapadmin/src/main/webapp/console/app/assets/lang/en.json
+++ b/ldapadmin/src/main/webapp/console/app/assets/lang/en.json
@@ -21,6 +21,7 @@
   "tab.logs"            : "Logs",
   "tab.manage"          : "Manage",
 
+  "user.userlist"       : "All users",
   "user.updated"        : "User updated",
   "user.error"          : "Error while saving user",
   "user.save"           : "Save",
