Reset logs filter

--- a/ldapadmin/src/main/webapp/console/app/assets/lang/en.json
+++ b/ldapadmin/src/main/webapp/console/app/assets/lang/en.json
@@ -53,7 +53,7 @@
   "logs.title"          : "Administration logs",
   "logs.logs"           : "Admin logs",
   "logs.date"           : "Date",
-  "logs.sender"         : "Sender",
+  "logs.sender"         : "Admin",
   "logs.target"         : "Recipient",
   "logs.type"           : "Action",
   "logs.allsender"      : "All",
