Add recipients filter with autocomplete

--- a/ldapadmin/src/main/webapp/console/app/assets/lang/en.json
+++ b/ldapadmin/src/main/webapp/console/app/assets/lang/en.json
@@ -58,6 +58,7 @@
   "logs.type"           : "Action",
   "logs.allsender"      : "All",
   "logs.alltype"        : "All",
+  "logs.alltarget"      : "All",
 
   "analytics.title"     : "Analytics",
   "analytics.everyone"  : "Everyone",
