--- a/ldapadmin/src/main/webapp/console/app/assets/lang/en.json
+++ b/ldapadmin/src/main/webapp/console/app/assets/lang/en.json
@@ -29,6 +29,21 @@
   "user.delete"         : "Delete user",
   "user.new_user"       : "New user",
   "user.discard"        : "Cancel",
+  "user.login"          : "Login",
+  "user.cn"             : "Last Name",
+  "user.mail"           : "E-mail",
+  "user.address"        : "Address",
+  "user.org"            : "Organization",
+  "user.description"    : "Description",
+  "user.manager"        : "Manager",
+  "user.expire"         : "Expire",
+  "user.context"        : "Context",
+  "user.reset"          : "Reset",
+  "user.password"       : "Password",
+  "user.gn"             : "First Name",
+  "user.phone"          : "Phone",
+  "user.fax"            : "Fax",
+  "user.title"          : "Title",
 
   "group.allusers"      : "All users",
   "group.system"        : "System groups",
