user fields trad + reset password + context

--- a/ldapadmin/src/main/webapp/console/app/assets/lang/en.json
+++ b/ldapadmin/src/main/webapp/console/app/assets/lang/en.json
@@ -30,7 +30,7 @@
   "user.new_user"       : "New user",
   "user.discard"        : "Cancel",
   "user.login"          : "Login",
-  "user.cn"             : "Last Name",
+  "user.cn"             : "Name",
   "user.mail"           : "E-mail",
   "user.address"        : "Address",
   "user.org"            : "Organization",
@@ -40,10 +40,12 @@
   "user.context"        : "Context",
   "user.reset"          : "Reset",
   "user.password"       : "Password",
-  "user.gn"             : "First Name",
+  "user.sn"             : "First Name",
+  "user.gn"             : "Last Name",
   "user.phone"          : "Phone",
   "user.fax"            : "Fax",
   "user.title"          : "Title",
+  "user.lastcontext"    : "Last context",
 
   "group.allusers"      : "All users",
   "group.system"        : "System groups",
