Remove fake data & hide options if necessary

--- a/ldapadmin/src/main/webapp/console/app/assets/lang/en.json
+++ b/ldapadmin/src/main/webapp/console/app/assets/lang/en.json
@@ -80,6 +80,7 @@
   "msg.send"            : "Send",
   "msg.sent"            : "Message sent!",
   "msg.error"           : "Error sending message",
+  "msg.empty"           : "No mails",
 
   "logs.title"          : "Administration logs",
   "logs.logs"           : "Admin logs",
