Add custom picker to interval selection

--- a/ldapadmin/src/main/webapp/console/app/assets/lang/en.json
+++ b/ldapadmin/src/main/webapp/console/app/assets/lang/en.json
@@ -105,5 +105,6 @@
   "date.week"           : "Last week",
   "date.month"          : "Last month",
   "date.3month"         : "Last 3 month",
-  "date.year"           : "Last year"
+  "date.year"           : "Last year",
+  "date.custom"         : "Custom range"
 }
